Nutch Change Log
 
Nutch Current Development 1.10-SNAPSHOT

* NUTCH-1941 Optional rolling http.agent.name's (Asitang Mishra, lewismc via snagel)

* NUTCH-1959 Improving CommonCrawlFormat implementations (Giuseppe Totaro via mattmann)

* NUTCH-1974 keyPrefix option for CommonCrawlDataDumper tool (Giuseppe Totaro via mattmann)

* NUTCH-1968 File Name too long issue of DumpFileUtil.java file (Xin Zhang, Renxia Wang via mattmann)

* NUTCH-1966 Configuration endpoint for 1x REST API (Sujen Shah via mattmann)

* NUTCH-1967 Possible SIooBE in MimeAdaptiveFetchSchedule (markus)

* NUTCH-1957 FileDumper output file name collisions (Renxia Wang via mattmann)

* NUTCH-1955 ByteWritable missing in NutchWritable (markus)

* NUTCH-1956 Members to be public in URLCrawlDatum (markus)
 
* NUTCH-1954 FilenameTooLong error appears in CommonCrawlDumper (mattmann)

* NUTCH-1949 Dump out the Nutch data into the Common Crawl format (Giuseppe Totaro via lewismc)

* NUTCH-1950 File name too long (Jiaheng Zhang, Chong Li via mattmann)

* NUTCH-1921 Optionally disable HTTP if-modified-since header (markus)

* NUTCH-1933 nutch-selenium plugin (Mo Omer, Mohammad Al-Moshin, lewismc)

* NUTCH-827 HTTP POST Authentication (Jasper van Veghel, yuanyun.cn, snagel, lewismc)

* NUTCH-1724 LinkDBReader to support regex output filtering (markus)

* NUTCH-1939 Fetcher fails to follow redirects (Leo Ye via snagel)

* NUTCH-1913 LinkDB to implement db.ignore.external.links (markus, snagel)

* NUTCH-1925 Upgrade to Apache Tika 1.7 (Tyler Palsulich via markus)

* NUTCH-1323 AjaxNormalizer (markus)

* NUTCH-1918 TikaParser specifies a default namespace when generating DOM (jnioche)

* NUTCH-1889 Store all values from Tika metadata in Nutch metadata (jnioche)

* NUTCH-865 Format source code in unique style (lewismc)

* NUTCH-1893 Parse-tika failes to parse feed files (Mengying Wang via snagel)

* NUTCH-1920 Upgrade Nutch to use Java 1.7 (lewismc)
