@@ -2,6 +2,8 @@ Nutch Change Log
  
 Nutch Current Development 1.10-SNAPSHOT
 
+* NUTCH-1976 Allow Users to Set Hostname for Server (Tyler Palsulich via mattmann)
+
 * NUTCH-1941 Optional rolling http.agent.name's (Asitang Mishra, lewismc via snagel)
 
 * NUTCH-1959 Improving CommonCrawlFormat implementations (Giuseppe Totaro via mattmann)
